--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-	--white: #FFFEFF;
-	--black: #010101;
+	--white: #ebe3ff;
+	--black: #0a0909;
 	--gray: #D6D5D6;
-	--primary: #A3AEB8;
+	--primary: #7484b9;
 }
 
 * {
